core/test/export_base_buffer.mlt
open! Core

module Buffer_is_from_base : module type of struct
  include Base.Buffer
end =
  Buffer

[%%expect {| |}]

module Buffer_is_from_caml : module type of struct
  include Stdlib.Buffer
end =
  Buffer

[%%expect
  {|
Line _, characters _-_:
Error: Signature mismatch:
       ...
       The value to_bytes is required but not provided
       File "buffer.mli", line 71, characters 0-25: Expected declaration
       The value output_buffer is required but not provided
       File "buffer.mli", line 110, characters 0-44: Expected declaration
       The value truncate is required but not provided
       File "buffer.mli", line 114, characters 0-31: Expected declaration
       The value add_utf_8_uchar is required but not provided
       File "buffer.mli", line 129, characters 0-42: Expected declaration
       The value add_utf_16le_uchar is required but not provided
       File "buffer.mli", line 135, characters 0-45: Expected declaration
       The value add_utf_16be_uchar is required but not provided
       File "buffer.mli", line 142, characters 0-45: Expected declaration
       The value add_substitute is required but not provided
       File "buffer.mli", line 172, characters 0-62: Expected declaration
       The value add_channel is required but not provided
       File "buffer.mli", line 190, characters 0-48: Expected declaration
       The value to_seq is required but not provided
       File "buffer.mli", line 202, characters 0-28: Expected declaration
       The value to_seqi is required but not provided
       File "buffer.mli", line 208, characters 0-37: Expected declaration
       The value add_seq is required but not provided
       File "buffer.mli", line 214, characters 0-37: Expected declaration
       The value of_seq is required but not provided
       File "buffer.mli", line 218, characters 0-28: Expected declaration
       The value add_uint8 is required but not provided
       File "buffer.mli", line 242, characters 0-32: Expected declaration
       The value add_int8 is required but not provided
       File "buffer.mli", line 248, characters 0-31: Expected declaration
       The value add_uint16_ne is required but not provided
       File "buffer.mli", line 254, characters 0-36: Expected declaration
       The value add_uint16_be is required but not provided
       File "buffer.mli", line 260, characters 0-36: Expected declaration
       The value add_uint16_le is required but not provided
       File "buffer.mli", line 266, characters 0-36: Expected declaration
       The value add_int16_ne is required but not provided
       File "buffer.mli", line 272, characters 0-35: Expected declaration
       The value add_int16_be is required but not provided
       File "buffer.mli", line 278, characters 0-35: Expected declaration
       The value add_int16_le is required but not provided
       File "buffer.mli", line 284, characters 0-35: Expected declaration
       The value add_int32_ne is required but not provided
       File "buffer.mli", line 290, characters 0-37: Expected declaration
       The value add_int32_be is required but not provided
       File "buffer.mli", line 296, characters 0-37: Expected declaration
       The value add_int32_le is required but not provided
       File "buffer.mli", line 302, characters 0-37: Expected declaration
       The value add_int64_ne is required but not provided
       File "buffer.mli", line 308, characters 0-38: Expected declaration
       The value add_int64_be is required but not provided
       File "buffer.mli", line 314, characters 0-37: Expected declaration
       The value add_int64_le is required but not provided
       File "buffer.mli", line 320, characters 0-37: Expected declaration
|}]
